--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/RegistroHotelero.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=src/jcalendar-1.4.jar
 file.reference.JTattooDemo.jar=C:\\Users\\Toshiba\\Downloads\\JTattooDemo.jar
 file.reference.liquidlnf.jar=C:\\Users\\Toshiba\\Downloads\\liquidlnf.jar
 includes=**
@@ -34,7 +35,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.JTattooDemo.jar}:\
-    ${file.reference.liquidlnf.jar}
+    ${file.reference.liquidlnf.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
