--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,16 +28,18 @@ dist.jar=${dist.dir}/RegistroHotelero.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=src\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=dist\\lib\\jcalendar-1.4.jar
 file.reference.JTattooDemo.jar=C:\\Users\\Toshiba\\Downloads\\JTattooDemo.jar
 file.reference.liquidlnf.jar=C:\\Users\\Toshiba\\Downloads\\liquidlnf.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
     ${file.reference.JTattooDemo.jar}:\
     ${file.reference.liquidlnf.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
